11 Jun 2001 Correct excarid in ESAME mode - Jan Jaeger
10 Jun 2001 Correct tea on MVPG protection exception - Paul Leisy
10 Jun 2001 Correct halt subchannel function - Jan Jaeger
10 Jun 2001 Correct set pathgroup id ccw - Jan Jaeger
10 Jun 2001 Correct clear subchannel function - Jan Jaeger
09 Jun 2001 Fix CUTFU/CUUTF with zero op2 length - Paul Leisy
09 Jun 2001 Fix STSI condition code - Paul Leisy
09 Jun 2001 Add t+ckd/t-ckd ckd keytrace command - Valery Pogonchenko
03 Jun 2001 Fix TRAP save area access - Paul Leisy
03 Jun 2001 Fix priority of interruptions in stacking PC - Jan Jaeger
03 Jun 2001 Fix priority of interruptions in BAKR - Paul Leisy
03 Jun 2001 Fix typo in setting amode in BSA - Paul Leisy
02 Jun 2001 Moved IEEE option from featall.h to makefile.w32 - Jan Jaeger
02 Jun 2001 Correct tea on asx translation exception in PC - Paul Leisy
02 Jun 2001 Fix update of GR5 in UPT - Paul Leisy
01 Jun 2001 Clear effective and instruction address cache in BSG - Paul Leisy
01 Jun 2001 Correct TEA stid identification bits - Paul Leisy
31 May 2001 Correct TLB purging on SIE dispatch - Jan Jaeger
31 May 2001 IVSK SIE fix - Paul Leisy
30 May 2001 Added CHSC channel subsystem call instruction - Jan Jaeger
28 May 2001 Fix logic error in CPU interlocking - Jan Jaeger
28 May 2001 Wakeup waiting CPU when interrupt key is processed - Jan Jaeger
27 May 2001 Correct mainstorage interlocked update/reference - Jan Jaeger
26 May 2001 Add _REENTRANT and _THREAD_SAFE flags - Jan Jaeger
25 May 2001 Various multi processing and SIE fixes - Jan Jaeger
24 May 2001 Performance enhancements - Juergen Dobrinski
24 May 2001 Added CGEBR/CGDBR - Jan Jaeger
24 May 2001 Added CEGBR/CDGBR - Kris
23 May 2001 CKD 9345 support - Greg Smith
21 May 2001 Correct availability of N3 instructions in S/390 mode - Jan Jaeger
19 May 2001 Compression corrections - Bernard van der Helm
19 May 2001 Include basic crypto support - Jan Jaeger
19 May 2001 Correct multiply/divide long - Jan Jaeger